Fix top spacing

--- a/src/App.css
+++ b/src/App.css
@@ -24,7 +24,7 @@ body {
 }
 
 .page {
-    margin-top:70px;
+    margin-top:120px;
     margin-bottom: 220px;
     padding: 20px 30px;
 }
